--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 <body>
     <!-- Titolo e informazioni autore -->
     <header> 
-
+        <h1>
+            Incremental and Decremental Support Vector Machine Learning
+        </h1>
+        <hr>
+        <h3>Gert Cauwenbhergs</h3>
+        <p>
+            CLSP, ECE Dept. <br>
+            Johns Hopkins University <br>
+            Baltimore, MD 21218 <br>
+            <em>gert@hu.edu</em>
+        </p>        
     </header>
     <!-- Il soggetto -->
     <main>
-
+        <h2></h2>
     </main>
     <!-- footer con link -->
     <footer>
