--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
     </header>
     <!-- Il soggetto -->
     <main>
-        <h2></h2>
+        <h2>Abstract</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipsicit elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitaion ullmaco laboris nisi utr aliquid ex ca commodo consequat. Duis aute irure dolor in reprehenderit in vulptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occacat cupidatat non prodent, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <ol>
+            <li><strong>Introduction</strong></li>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipsicit elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitaion ullmaco laboris nisi utr aliquid ex ca commodo consequat. Duis aute irure dolor in reprehenderit in vulptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occacat cupidatat non prodent, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <img src="img/paper_scientifico.png" alt="">
+        </ol>
+        
     </main>
     <!-- footer con link -->
     <footer>
-
     </footer>
 </body>
 </html>
