--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </main>
     <!-- footer con link -->
     <footer>
+        <a href="https://it.wikipedia.org/wiki/Macchine_a_vettori_di_supporto">Go to Wikipedia to know more</a>
     </footer>
 </body>
 </html>
